# rumboot

./: .gitignore  .gitmodules  CMakeLists.txt  DEBUGGING.md  Doxyfile.cmake  Jenkinsfile  LOADER.md  README.md  TODO  run_clang_analyze.sh
.delivery/: na_stage3.yaml  scr1_na.yaml
cmake/: RumBoot.cmake  basis.cmake  bootrom.cmake  config.yaml  cross-compile.cmake  integration.cmake  na.cmake  spels.cmake  test-runner.sh.in
doc/: bootrom.asciidoc
doc/common/: v1.asciidoc  v2.asciidoc  v3.asciidoc
doc/soc/generic/: boot_priority.asciidoc  bootflow.asciidoc  bootseq.asciidoc  selftest.asciidoc  tech_channels.asciidoc
doc/soc/o32t/: boot_priority.asciidoc  bootflow.asciidoc  features.asciidoc  selftest.asciidoc  soc_boot_description.asciidoc  tech_channels.asciidoc
doc/soc/oi10/: bootflow.asciidoc  bootseq.asciidoc  selftest.asciidoc  tech_channels.asciidoc
include/: gcov.h  globals.h  startup.h
include/algo/: crc32.h  crc8.h  heatshrink_config.h  ini.h  list.h  shrink.h
include/arch/: doxygen.h
include/arch/arm/: irq_macros.h
include/arch/ppc/: ppc_476fp_asm.h  ppc_476fp_config.h  ppc_476fp_ctrl_fields.h  ppc_476fp_debug_fields.h  ppc_476fp_itrpt_fields.h  ppc_476fp_lib_c.h  ppc_476fp_mmu.S.h  ppc_476fp_mmu.h  ppc_476fp_mmu_fields.h  ppc_476fp_timer_fields.h
include/basis/: defs.h  defs_c.h  tubemacro.incl
include/common_macros/: common_macros.h
include/common_macros/boost/: preprocessor.hpp
include/devices/: arinc.h  bisr.h  can.h  can_adapter.h  chip_id.h  com_simple.h  crg.h  dit.h  dit_lib.h  doxygen.h  eeprom.h  gic.h  go_dmac.h  gp_timers.h  gpio.h  gpio_pl061.h  greth_edcl.h  hscb.h  i2c.h  interprocessor_irq.h  irq-dummy.h  irq-nmc.h  irq-proxy-gic-cdnpcie.h  lava_demonstrator.h  mdio.h  mdma.h  mdma_chan_api.h  mdma_simple.h  mgeth.h  mkio.h  mpic128.h  muart.h  nfifo.h  nic400.h  p64.h  pcie.h  pl022.h  pl022_flash.h  pl022_ssp.h  pl310.h  (+14 more)
include/devices/gpio/: dummy.h  pl061.h  rcm.h
include/devices/mpic/: mpic.h  reg_fields_mpic.h
include/devices/plb6bc/: reg_field_plb6bc.h
include/devices/plb6plb4/: p64.h  reg_fields_p64.h
include/devices/rcm_na/: nu_lib.h  nu_npe_file_tags.h  nu_test_lib.h  nu_test_macro.h  nu_vpe_file_tags.h  nu_vpe_ppe_file_tags.h
include/devices/ugly/: emi.h  greth.h  hscb.h  plb6mcif2.h
include/devices/wdt/: wdt.h
include/platform/: doxygen.h
include/platform/o32t/: devices.h
include/regs/: arinc.h  pl022_ssp.h  plb6_bc.h  quad_spi.h  rcm_cp.h  regs_bisr.h  regs_com.h  regs_crg.h  regs_ddr.h  regs_demonstrator.h  regs_gic.h  regs_global_timers.h  regs_gp_timers.h  regs_gpio-pl061.h  regs_gpio.h  regs_gpio_pl061.h  regs_gpio_rcm.h  regs_hscb.h  regs_i2c.h  regs_interprocessor_irq.h  regs_l2c.h  regs_mdio.h  regs_mdma.h  regs_mgeth.h  regs_mkio.h  regs_mpic.h  regs_mpic128.h  regs_muart.h  regs_na.h  regs_na_cu.h  regs_nic400.h  regs_nmc_dbg.h  regs_nu_cpdmac.h  regs_nu_mpe.h  regs_nu_ppe.h  regs_nu_vpe.h  regs_p64.h  regs_pcie.h  regs_plb6bc.h  regs_sdio.h  (+6 more)
include/regs/fields/: emi.h  mpic128.h
include/regs/l2c/: l2c_config.h
include/regs/p64/: arinc.h  reg_fields_p64.h
include/regs/plb6bc/: reg_field_plb6bc.h
include/rumboot/: bitswapper.h  boot.h  bootheader.h  bootsource.h  crc32.h  ddr_test_lib.h  dit_lib.h  dma_test_lib.h  doxygen.h  gpio.h  hexdump.h  io.h  irq.h  macros.h  memfill.h  memfillseq.h  memtest.h  pcie_lib.h  pcie_test_lib.h  platform.h  printf.h  regpoker.h  rumboot.h  testsuite.h  timer.h  version.h  xmodem.h
include/rumboot/bootsrc/: boilerplate.h  doxygen.h  eeprom.h  file.h  physmap.h  sdio.h  spiflash.h
lds/basis/: iram-spl.lds  iram.lds  rom-with-data.lds  rom.lds
lds/bbp3/: iram-spl.lds  iram.lds  rom.lds
lds/mm7705/: ram.lds  rom-shim.lds  spl.lds
lds/mpw-proto/: im0.lds  primary.lds  ram.lds  secondary.lds  spl.lds
lds/nm6408/: iram.lds  rom.lds
lds/nmc/: emi.lds  generic.lds  im3.lds  micro.lds  unified.lds
lds/nmc3/: generic.lds
lds/o32t/: bootrom.lds  iram-spl-im0.lds  iram-spl.lds  iram.lds  iram_im0.lds  runtime_section.lds.h  stacks_section.lds.h
lds/oi10/: bootrom.lds  bootrom_legacy.lds  iram-spl-im0.lds  iram-spl.lds  iram.lds  iram_legacy.lds  iram_legacy_cached.lds  l2bug_sram_test.lds  l2bug_supp-2.lds  l2bug_supp.lds  memory.lds.h  oi10new_dcache.lds  oi10new_memcopy_write-back.lds  oi10new_memcopy_write-through.lds  rom.lds  runtime_section.lds.h  sram0.lds  test_oi10_cpu_027_sram0.lds  test_oi10_cpu_038_im0.lds  test_oi10_cpu_038_im1.lds  test_oi10_cpu_038_im2.lds  test_oi10_cpu_038_sram0.lds  test_oi10_cpu_039_sram0.lds  test_oi10_greth.lds  test_oi10_max_power.lds  test_oi10_sys_010.lds
lds/scr1/: rom.lds
lds/zed/: app.lds
lua2c/lib/lua2c/: ast2cast.lua
scripts/: cmake_format_config  delivery.py  extract-labels.py  extract_checks.py  generate_reduced_package.sh  get_ctest_I.pl  merge_npe_rm_files.sh  mm7705.edcl  nu_stage3_nkbvs.list  nu_stage3_regression.list  parse.sh  parse2.py  romapigen.py  rumbootimage.py  rumbootpackimage.py  run_clang_analyze.sh  simplexmodem.py  test-all-builds.sh  wordpattern.py  write_na_trivial_dep_table.pl
scripts/ISS/: dump_gen.csh  iss_oi10.icf  postload_oi10.rwc  sim_oi10.rwc
src/: banner.c  irq.c  rumboot_main.c  rumboot_main_native.c
src/arch/: arm.c
src/arch/arm/: cache-pl310.c  exception.c  startup.S
src/arch/native/: exception.c
src/arch/nmc3/: exception.c
src/lib/: bitswapper.c  bootdbg.c  bootheader.c  bootheader_legacy.c  bootimage.c  bootsource.c  crc32.c  eventsystem-memory.c  gcov-gcc-4.7.c  gcov.c  gpio.c  hexdump.c  ini.c  logo.c  malloc.c  memtest.c  newlib-stubs.c  printf.c  regpoker.c  stdio.c  testsuite.c  trace.c  version.c  weaklings.c  xmodem.c
utils/: CMakeLists.txt  asprintf.c  romgen.c  scatter_hex.pl  shmtest.c
utils/bin_generator/: CMakeLists.txt  bin_generator.c
utils/bin_generator/theini_handler/: ini_gen_loader.c  ini_gen_loader.h
utils/matrix_rm/: .directory  CMakeLists.txt  README.asciidoc  test_rm.c
utils/matrix_rm/reference_model/: README.asciidoc  matrix_rm.c  matrix_rm.h
utils/matrix_rm/theini_handler/: ini_loader.c  ini_loader.h
(+1945 files in other folders)
