cmake_minimum_required (VERSION 2.6)
project (rumboot-utils C)

if (NOT RUMBOOT_DISABLE_CCACHE)
  find_program(CCACHE_FOUND ccache)
else()
  set(CCACHE_FOUND No)
endif()

if(CCACHE_FOUND)
    set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE ccache)
    set_property(GLOBAL PROPERTY RULE_LAUNCH_LINK ccache)
endif()

set(missing_sources )
if (WIN32)
    set(missing_sources asprintf.c)
endif()
add_executable(romgen romgen.c ${missing_sources})
add_executable(shmtest shmtest.c ${missing_sources})
find_package(Git)
